--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,40 @@
 body{
     background-color: #8AD0E6; 
-    font-family:  'Nunito', sans-serif;;
+    font-family:  'Nunito', sans-serif;
+    
 }
 
 .navbar{
    background-color: #24305E;
+}
+#thinker{
+    background-image: url("../images/opinion\ writing.jpeg");
+    height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+}
+
+#books{
+    
+    background-image: url("../images/books\ image.jpeg");
+    height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+}
+
+#info-writing-section{
+    background-color:#F76C6C;
+}
+
+#opinion-writing-section{
+    /* background-color: #F8E9A1; */
+    background-color: #374785;
+}
+
+#narrative-writing-section{
+    background-color:#F76C6C;
 }
 
 .card{
