--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,7 @@ body{
 .navbar{
    background-color: #24305E;
   position: fixed;
+  z-index: 1;
 }
 
 #parallax-white-section{
@@ -34,6 +35,7 @@ margin-left: 125px;
 margin-top: 135px;
 color: #24305E;
 width: 820px;
+/* z-index:-100; */
 }
 
 #info-writing-section{
@@ -49,16 +51,22 @@ width: 820px;
     background-color:#F76C6C;
 }
 
+#choice-title{
+    text-align: center;
+    font-size: 80px;
+    margin-top: 80px;
+}
+
+#card-area{
+    height: 500px;
+    margin-top: 50px;
+}
+
+
 .card{
 color:black;
 font-size: 16px;
 }
-
-#choice-title{
-    text-align: center;
-    font-size: 80px;
-}
-
 
 .card-titles{
     font-size: 48px;
@@ -66,6 +74,15 @@ font-size: 16px;
     color: white;
 }
 
+
 #button{
     background-color:#F76C6C;
+}
+#footer-row{
+    background-color: #24305E;
+    height: 200px;
+}
+
+#footer-bottom{
+background-color:#F76C6C
 }
