--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,11 @@ body{
   position: fixed;
   z-index: 1;
 }
+#scroll-down{
+    font-size: 47px;
+    margin-left: 450px;
+    color: #F76C6C;
+}
 
 #parallax-white-section{
     height: 150px;
