--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -80,7 +80,7 @@ font-size: 16px;
 }
 
 #icon-section{
-    margin-top: 60px;
+    margin-top: 160px;
 }
 
 #icons-row{
@@ -100,7 +100,8 @@ color: #F76C6C;
 }
 
 #choice-title{
-    color:#24305E
+    color:#24305E;
+    margin-top: 180px;
 }
 
 
