--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,6 +13,7 @@ body{
     font-size: 47px;
     margin-left: 450px;
     color: #F76C6C;
+    cursor: pointer;
 }
 
 #parallax-white-section{
@@ -113,6 +114,7 @@ color: #F76C6C;
 #footer-row{
     background-color: #24305E;
     height: 200px;
+    margin-top: 100px;
 }
 
 #footer-bottom{
