--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -88,6 +88,7 @@ font-size: 16px;
     text-align: center;
     font-size: 65px;
     color: #24305E;
+    cursor: pointer;
     /* margin-right: 15px; */
 }
 
