text-structure-buttons

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -155,20 +155,18 @@ width: 820px;
     padding: 30px;
 }
 
-.accordion{
-    background-color: #24305E;
-    color: white;
-    margin: 0px 0px 0px 130px;
-    padding: 18px;
-    width: 80%;
-    font-family:  'Nunito', sans-serif;
-    color:#F76C6C;
+.text-structure-list{
+    text-align: center;
+    color: #24305E;
 }
 
-.panel{
-    width: 80%;
-    margin-left: 130px;
-    /* display: none; */
+#description-button{
+    background-color:#F76C6C;
+   border-radius: 25px;
+}
+
+#description-text-display{
+    font-size: 18px;
 }
 
 /**OPINION WRITING SECTION **/
