--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -163,15 +163,12 @@ width: 820px;
     font-size: 18px;
 }
 
-#description-button{
+#learn-more-button{
     background-color:#F76C6C;
    border-radius: 25px;  
 }
 
-#compare-button{
-    background-color:#F76C6C;
-   border-radius: 25px; 
-}
+
 
 
 
