finished-informative-writing-modals

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -159,7 +159,7 @@ width: 820px;
     color: #24305E;
 }
 
-#text-structure-modal-title{
+.text-structure-modal-title{
     text-decoration: underline;
 }
 
