topics-in-arrays-added-buttons-to-sticky-z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,8 @@ body{
   position: fixed;
   z-index: 1;
 }
+
+
 #scroll-down{
     font-size: 47px;
     margin-left: 450px;
@@ -20,6 +22,7 @@ body{
     height: 150px;
 
 }
+
 #books-lighting{
   background-position: center; 
   background-repeat: no-repeat; 
@@ -55,6 +58,19 @@ width: 820px;
 /* z-index:-100; */
 }
 
+li{
+    position: sticky;
+}
+
+.row{
+    position: sticky;
+    z-index:0;
+}
+
+.random-prompt-title{
+    text-decoration: underline;
+}
+
 #info-writing-section{
     background-color:#F76C6C;
 }
@@ -78,7 +94,6 @@ width: 820px;
     height: 500px;
     margin-top: 50px;
 }
-
 
 .card{
 color:black;
@@ -125,7 +140,7 @@ color: #F76C6C;
 #footer-row{
     background-color: #24305E;
     height: 200px;
-    margin-top: 100px;
+    margin-top: 400px;
 }
 
 #footer-bottom{
