--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -115,8 +115,10 @@ font-size: 16px;
     color: white;
 }
 
+
 #icon-section{
-    margin-top: 160px;
+    margin: 160px 20px 0px 20px;
+
 }
 
 #icons-row{
@@ -134,6 +136,8 @@ color: #F76C6C;
 
 .column-descriptions{
     font-size: 20px;
+    justify-content: center;
+    margin: auto;
 }
 
 #choice-title{
@@ -143,6 +147,7 @@ color: #F76C6C;
 
 #topic-button{
     background-color:#F76C6C;
+    /* background-color: none; */
     border-radius: 25px;
 }
 
